Home page updates

--- a/home.html
+++ b/home.html
@@ -2,16 +2,15 @@
 <article class="clearfix">
 
     <div class="p-image">
-        <img src="img/profile.jpg" alt="My Image">
+        <img src="img/profile.png" alt="My Image">
     </div>
 
 </article>
 
 <article class="p-details profile">
-    <h2>Jonathan Doe</h2>
-    <h4>Webdesigner &amp; Web Developer from Melbourne</h4>
-    <p>Hi! My name is Johnathan, I'm a creative designer and developer from Melbourne. I enjoy creating eye candy solutions for web and mobile applications. I'd love to work on yours, too :)</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, deserunt, a, quidem provident ipsam eveniet doloremque perferendis animi veniam temporibus illo delectus inventore expedita sapiente amet nihil est sequi. Molestiae, unde, harum, dicta perferendis nesciunt quae nemo cum mollitia aliquam similique voluptate tenetur pariatur. Reiciendis!</p>
+    <h2>Gints Murāns</h2>
+    <h4>Web &amp; iOS Developer from Latvia</h4>
+    <p>Hi! My name is Gints, I'm web and ios developer from Latvia. I enjoy creating eye candy solutions for web and mobile applications. I'd love to work on yours, too :)</p>
     <a href="#work" data-url="work.html">View my portfolio</a>
     <a href="#contact" data-url="contact.html">Contact me now</a>
 </article>
