--- a/work.html
+++ b/work.html
@@ -1,7 +1,7 @@
 
 <article class="work">
 
-    <h2>My projects</h2>
+    <h2>TODO: My projects</h2>
     <ul class="projects">
         <li>
             <figure>
