--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Add your CSS files here -->
     <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?1">
     <link rel="stylesheet" href="css/nivo/default.css">
     <link rel="stylesheet" href="css/themes/green.css">
 
