--- a/work.html
+++ b/work.html
@@ -6,18 +6,18 @@
 
         <li class="item">
             <figure>
-                <a href="img/work/web/textcrypt.png" class="image swipebox">
-                    <img src="img/work/web/textcrypt_thumb.png" alt="My Image">
+                <a href="img/work/web/cryptex.png" class="image swipebox">
+                    <img src="img/work/web/cryptex_thumb.png" alt="My Image">
                     <div>
                         <span class="icon-search"></span>
                     </div>
                 </a>
                 <figcaption>
-                    <h4>TextCrypt</h4>
+                    <h4>Cryptex</h4>
                     <p class="year">2014</p>
                     <p>
-                        OSX app to protect textual data.
-                        <br /><a href="http://textcrypt.4apps.lv/" target="_blank">textcrypt.4apps.lv</a>
+                        Encrypted text editor for OS X
+                        <br /><a href="https://itunes.apple.com/lv/app/cryptex-encrypted-markdown/id928887668?mt=12" target="_blank">Mac Appstore</a>
                     </p>
                     <ul class="skills">
                         <li>objective-c</li>
