--- a/home.html
+++ b/home.html
@@ -2,15 +2,15 @@
 <article class="clearfix">
 
     <div class="p-image">
-        <img src="img/profile.png" alt="My Image">
+
     </div>
 
 </article>
 
 <article class="p-details profile">
     <h2>Gints Murāns</h2>
-    <h4>Web &amp; iOS Developer from Latvia</h4>
-    <p>Hi! My name is Gints, I'm web and ios developer from Latvia. I enjoy creating eye candy solutions for web and mobile applications. I'd love to work on yours, too :)</p>
+    <h4>Web &amp; iOS Developer</h4>
+    <p>Hi! I'm a web, various systems and ios developer from Latvia.</p>
     <a href="#work" data-url="work.html">View my portfolio</a>
     <a href="#contact" data-url="contact.html">Contact me now</a>
 </article>
