--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,41 @@
     <h2>My career</h2>
     <ul class="ro-timeline">
         <li>
-            <div class="ro-time"><span>2013 - Now</span></div>
+            <div class="ro-time"><span>2011 - Now</span></div>
+            <div class="ro-icon icon-briefcase"></div>
+            <div class="ro-label">
+                <h3>Owner<span>4Apps</span></h3>
+                <p>
+                    iOS apps, websites, various systems, industrial stuff.<br /><br />
+
+                    <strong>Industrial:</strong><br />
+                    Temperature monitoring of oat flakes manufactoring process.<br />
+                    Fire alarm manual call point monitoring.<br />
+                    Printing of various kinds of packing labels<br />
+                    Direct printing on boxes<br />
+                    Ordering systems<br />
+                    Inventory application<br />
+                    Sales product tracking application<br />
+                    <br />
+
+                    <strong>Apps:</strong><br />
+                    <a href="https://itunes.apple.com/us/app/latviesu-lingo/id593464695?mt=8">Lingo</a>: Word games<br />
+                    <a href="https://itunes.apple.com/us/app/cryptex-encrypted-markdown/id928887668?mt=12">Cryptex</a>: Encrypted markdown editor for OSX<br />
+                    <a href="https://itunes.apple.com/us/app/do-more-simple-to-do-lists/id659282652?mt=8">Do More</a>: Simple To-Do app<br />
+                    <br />
+
+                    <strong>Past apps:</strong><br />
+                    Code Cards: Application to replace your plastic code card used by many banks as authentication method.<br />
+                    List Browser: App to organize your self into lists and sublists.<br />
+                    Counting Numbers: Silly little app to help fall asleep<br />
+                    NescaFace: Marketing App for Nescafe<br />
+                    Track your money: Money tracking App<br />
+                    Draugiem pele: Notification App for local social network.
+                </p>
+            </div>
+        </li>
+        <li>
+            <div class="ro-time"><span>2013 - 2015</span></div>
             <div class="ro-icon icon-briefcase"></div>
             <div class="ro-label">
                 <h3>CTO<span>Early Bird</span></h3>
@@ -15,23 +49,6 @@
                     Currently working on http://topy.tv and http://near.is.
 
                     <br /><br />php, html, css, javascript, jquery, debian, nginx, git, python, redis, mongodb, postgresql, graphicsmagick, objective-c, and more.
-                </p>
-            </div>
-        </li>
-        <li>
-            <div class="ro-time"><span>2011 - Now</span></div>
-            <div class="ro-icon icon-briefcase"></div>
-            <div class="ro-label">
-                <h3>CEO and Owner<span>4Apps</span></h3>
-                <p>
-                    Worked on multiple iOS applications. Most of them are now removed from the store, but was a really great learning curve.<br /><br />
-
-                    Code Cards: Application to replace your plastic code card used by many banks as authentication method.<br />
-                    List Browser: App to organize your self into lists and sublists.<br />
-                    Counting Numbers: Silly little app to help fall asleep<br />
-                    NescaFace: Marketing App for Nescafe<br />
-                    Track your money: Money tracking App<br />
-                    Draugiem pele: Notification App for local social network.
                 </p>
             </div>
         </li>
@@ -136,8 +153,8 @@
     <ul class="skills">
         <li>PHP</li>
         <li>Python</li>
+        <li>Swift</li>
         <li>Objective-C</li>
-        <li>Learning Swift</li>
     </ul>
 
     <h3 class="test"><span class="icon-database"></span>Databases</h3>
