--- a/work.html
+++ b/work.html
@@ -533,6 +533,80 @@
     <ul class="projects">
         <li class="item">
             <figure>
+                <a href="#">
+                    <img src="img/no_image.png" alt="My Image">
+                </a>
+                <figcaption>
+                    <h4>Dzirnavnieks</h4>
+                    <p class="year">2015-now</p>
+                    <p>
+                        Various stuff for <a href="http://dzirnavnieks.lv/">Dobeles dzirnavnieks</a>
+                    </p>
+                    <ul class="skills">
+                        <li>html</li>
+                        <li>css</li>
+                        <li>js</li>
+                        <li>php</li>
+                        <li>python</li>
+                        <li>swift</li>
+                        <li>linux</li>
+                        <li>videojet</li>
+                        <li>zebra</li>
+                        <li>arduino</li>
+                        <li>.. and more</li>
+                    </ul>
+                </figcaption>
+            </figure>
+        </li>
+
+        <li class="item">
+            <figure>
+                <a href="img/work/web/dzirnavnieks_parslas.png" class="image swipebox">
+                    <img src="img/work/web/dzirnavnieks_parslas_thumb.png" alt="My Image">
+                    <div>
+                        <span class="icon-search"></span>
+                    </div>
+                </a>
+                <figcaption>
+                    <h4>Dzirnavnieks</h4>
+                    <p class="year">2016</p>
+                    <p>
+                        <a href="http://dzirnavnieks.lv/parslas/">Flakes</a> campaign
+                    </p>
+                    <ul class="skills">
+                        <li>html</li>
+                        <li>css</li>
+                        <li>js</li>
+                    </ul>
+                </figcaption>
+            </figure>
+        </li>
+
+        <li class="item">
+            <figure>
+                <a href="img/work/web/dzirnavnieks_pasta.png" class="image swipebox">
+                    <img src="img/work/web/dzirnavnieks_pasta_thumb.png" alt="My Image">
+                    <div>
+                        <span class="icon-search"></span>
+                    </div>
+                </a>
+                <figcaption>
+                    <h4>Dzirnavnieks</h4>
+                    <p class="year">2016</p>
+                    <p>
+                        <a href="http://dzirnavnieks.lv/pasta/">Pasta</a> campaign
+                    </p>
+                    <ul class="skills">
+                        <li>html</li>
+                        <li>css</li>
+                        <li>js</li>
+                    </ul>
+                </figcaption>
+            </figure>
+        </li>
+
+        <li class="item">
+            <figure>
                 <a href="img/work/web/pestivals.png" class="image swipebox">
                     <img src="img/work/web/pestivals_thumb.png" alt="My Image">
                     <div>
