--- a/resume.html
+++ b/resume.html
@@ -230,6 +230,8 @@
     <ul class="skills">
         <li>git</li>
         <li>svn</li>
+        <li>github</li>
+        <li>gitlab</li>
     </ul>
 </aside>
 <!-- Sidebar End -->
