--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <nav id="nav">
             <ul class="nav">
                 <li><img src="img/logo.svg" alt="My Logo"></li>
-                <li><a href="#home" class="icon-user" data-url="home.html"><span>Profile</span></a></li>
-                <li><a href="#work" class="icon-briefcase" data-url="work.html"><span>Work</span></a></li>
+                <!-- <li><a href="#home" class="icon-user" data-url="home.html"><span>Profile</span></a></li>
+                <li><a href="#work" class="icon-briefcase" data-url="work.html"><span>Work</span></a></li> -->
                 <li><a href="#resume" class="icon-list" data-url="resume.html"><span>Resume</span></a></li>
                 <li><a href="#contact" class="icon-mail" data-url="contact.html"><span>Contact</span></a></li>
             </ul>
