--- a/lv/resume.html
+++ b/lv/resume.html
@@ -1,6 +1,6 @@
 
 <article class="career">
-    <h2>CV</h2>
+    <h2>Gints Murāns CV</h2>
     <ul class="ro-timeline">
         <li>
             <div class="ro-time"><span>2011 - šobrīd</span></div>
