--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,21 @@
             <div class="ro-time"><span>2011 - Now</span></div>
             <div class="ro-icon icon-briefcase"></div>
             <div class="ro-label">
+                <h3>IT R&D<span>AS Dobeles dzirnavnieks</span></h3>
+                <p>
+                    Enterprise iOS apps;<br />
+                    Production tracking;<br />
+                    Data collecting;<br />
+                    Ordering systems;<br />
+                    Transport territory register journal && transport scaling;
+                    .. and more.<br /><br />
+                </p>
+            </div>
+        </li>
+        <li>
+            <div class="ro-time"><span>2011 - Now</span></div>
+            <div class="ro-icon icon-briefcase"></div>
+            <div class="ro-label">
                 <h3>Owner<span>4Apps</span></h3>
                 <p>
                     iOS apps, websites, various systems, industrial stuff.<br /><br />
@@ -146,7 +161,9 @@
     <ul class="skills">
         <li>HTML</li>
         <li>CSS</li>
+        <li>SCSS</li>
         <li>Javascript</li>
+        <li>ES6</li>
     </ul>
 
     <h3 class="test"><span class="icon-text-2"></span>Programming</h3>
@@ -157,14 +174,21 @@
         <li>Objective-C</li>
     </ul>
 
+    <h3 class="test"><span class="icon-text-2"></span>.. some experience</h3>
+    <ul class="skills">
+        <li>Java</li>
+        <li>NodeJS</li>
+        <li>C (Arduino)</li>
+    </ul>
+
     <h3 class="test"><span class="icon-database"></span>Databases</h3>
     <ul class="skills">
         <li>PostgreSql</li>
         <li>MySql</li>
         <li>MongoDB</li>
-        <li>Core Data (sqlite)</li>
         <li>Redis</li>
         <li>Memcached</li>
+        <li>Core Data (sqlite)</li>
     </ul>
 
     <h3 class="test"><span class="icon-tools"></span>Frameworks & Libraries</h3>
@@ -179,6 +203,7 @@
         <li>ImageMagick</li>
         <li>GraphicsMagick</li>
         <li>Cocos2D-iPhone / Cocos2D-Swift</li>
+        <li>Apple GameKit</li>
     </ul>
 
     <h3 class="test"><span class="icon-box"></span>CMS</h3>
@@ -203,6 +228,21 @@
         <li>Multiple self made for iOS Apps</li>
     </ul>
 
+    <h3 class="test"><span class="icon-flow-cascade"></span>Version Control</h3>
+    <ul class="skills">
+        <li>git</li>
+        <li>svn</li>
+        <li>github</li>
+        <li>gitlab</li>
+    </ul>
+
+    <h3 class="test"><span class="icon-flow-cascade"></span>Package managers</h3>
+    <ul class="skills">
+        <li>Nmp</li>
+        <li>Composer</li>
+        <li>Cocoapods</li>
+    </ul>
+
     <h3 class="test"><span class="icon-screen"></span>Server Stuff</h3>
     <ul class="skills">
         <li>Linux</li>
@@ -214,6 +254,7 @@
         <li>php-fpm</li>
         <li>Bash scripting</li>
         <li>rsync</li>
+        <li>monit</li>
         <li>supervisord</li>
         <li>calendarserver</li>
         <li>dovecot</li>
@@ -226,12 +267,11 @@
         <li>And others</li>
     </ul>
 
-    <h3 class="test"><span class="icon-flow-cascade"></span>Version Control</h3>
+    <h3 class="test"><span class="icon-flow-cascade"></span>Hardware</h3>
     <ul class="skills">
-        <li>git</li>
-        <li>svn</li>
-        <li>github</li>
-        <li>gitlab</li>
+        <li>Arduino</li>
+        <li>Controllino</li>
+        <li>Raspberry pi</li>
     </ul>
 </aside>
 <!-- Sidebar End -->
