Fixed issue that first page won't open

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 
 <script src="js/jquery-1.10.2.min.js"></script>
-<script src="js/plugins.js"></script>
 <script src="js/jquery.mixitup.js"></script>
 <script src="js/jquery.swipebox.js"></script>
 <script type="text/javascript" src="js/jquery.nivo.slider.js"></script>
+<script src="js/plugins.js?1"></script>
 
 <script>
       var navigation = responsiveNav("#nav", {
