Remembered few more things

--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
                 <p>
                     Enterprise iOS apps;<br />
                     Production tracking;<br />
-                    Data collecting;<br />
+                    Data collection, both manual and automatic and over multiple protocols;<br />
                     Ordering systems;<br />
                     Transport territory register journal && transport scaling;
                     .. and more.<br /><br />
@@ -272,6 +272,8 @@
         <li>Arduino</li>
         <li>Controllino</li>
         <li>Raspberry pi</li>
+        <li>BeagleBone Black</li>
+        <li>Olimex</li>
     </ul>
 </aside>
 <!-- Sidebar End -->
