--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <h2>Contact</h2>
         <p>
             <strong>Gints Murans</strong><br>
-            Valmiera, Latvia
+            Dobele, Latvia
         </p>
         <p>
             <strong>E-Mail Contact:</strong>
