--- a/resume.html
+++ b/resume.html
@@ -6,13 +6,13 @@
             <div class="ro-time"><span>2011 - Now</span></div>
             <div class="ro-icon icon-briefcase"></div>
             <div class="ro-label">
-                <h3>IT R&D<span>AS Dobeles dzirnavnieks</span></h3>
+                <h3>Head of IT R&D<span>AS Dobeles dzirnavnieks</span></h3>
                 <p>
                     Enterprise iOS apps;<br />
                     Production tracking;<br />
-                    Data collection, both manual and automatic and over multiple protocols;<br />
+                    Data collection, both manual and automatic and over different protocols;<br />
                     Ordering systems;<br />
-                    Transport territory register journal && transport scaling;
+                    Transport territory register journal && transport scaling;<br />
                     .. and more.<br /><br />
                 </p>
             </div>
