--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="http://facebook.com/gints.murans" class="icon-facebook" title="Facebook"></a>
         <a href="http://twitter.com/gintsmurans" class="icon-twitter" title="Twitter"></a>
         <a href="https://github.com/gintsmurans" class="icon-github" title="GitHub"></a>
+        <a href="https://www.linkedin.com/in/gintsmurans/" class="icon-linkedin" title="LinkedIn"></a>
     </div>
     <!-- Social Icons End -->
 
